infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ticketing-ingress
  namespace: ticketing

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
